--- a/country/russia/info/index.html
+++ b/country/russia/info/index.html
@@ -34,6 +34,14 @@
     </header>
     <main>
         <div class="container">
+            <h1>Ельцину исполнилось бы 90 лет</h1>
+            <img src="putin_mogila_elcina.jpg" alt="" >
+            <p>
+                Бори́с Николаевич Ельцин — советский и российский партийный, государственный и политический
+                деятель. Первый президент Российской Федерации (1991—1999). Родился 1 февраля 1931, в селе Бутка,
+                Буткинский район, Уральская область, РСФСР, СССР. Хороший был человек. Жалко, что он умер 23 апреля 2007 года в Москве.
+            </p>
+            <br><br>
             <h1>Распоряжение Правительства РФ</h1>
             <hr>
             <p class="center"><b>Распоряжение Правительства РФ от 31 декабря 2020 г. N 3704-р</b></p>
