--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <div class="container">
             <h1>Ельцину исполнилось бы 90 лет</h1>
-            <img src="putin_mogila_elcina.jpg" alt="" >
+            <img src="country/russia/info/putin_mogila_elcina.jpg" alt="" >
             <p>
                 Бори́с Николаевич Ельцин — советский и российский партийный, государственный и политический
                 деятель. Первый президент Российской Федерации (1991—1999). Родился 1 февраля 1931, в селе Бутка,
