--- a/country/russia/info/index.html
+++ b/country/russia/info/index.html
@@ -34,15 +34,170 @@
     </header>
     <main>
         <div class="container">
+            <h1>Политика</h1>
+            <hr>
+            <h2>Навальный в России</h2>
+            <p>17 янвавря 2021 Навальный прилетел в России и сразу его арестовали. По мне правильно сделали. Он шпион
+                США - враг России. </p>
+            <p>Скажу я так, что для меня Навальный - это предатель Родины. Он никогда больше не изменится. Он уже
+                подчиняется США, чтобы через него получить доступ к управлению нашей страны. Но пока Путин президент у
+                США ничего не выйдет.
+            </p>
+            <p>
+                23 января будет митинг. И че? Смысл этого митинга. Вот скажите кто этот Навальный? Он предатель Родины.
+                Если он станет президентом, что сразу не будет коррупции? Или то что дороги станут качественнее Или чем
+                вам Путин не нравится?
+            </p>
+            <p>
+                Путин - хороший президент. Он поднял нашу страну из забвения. Да и у него есть косяки, но зачем его
+                свергать. Наоборот его сергать не надо, пусть будет правит страной. Ону же знает что надо делать.
+                А Навальный? станет президентом и ничего он не знает что творится в стране.
+            </p>
+<br><br>
+            <h2>Навального посадили</h2>
+            <hr>
+            <p>
+                Московский городской суд приговорил российского оппозиционера Алексея Навального к 3,5 годам тюремного
+                заключения и штрафу в размере 500 тысяч рублей (более 6,5 тысяч долларов). На фоне этого в России прошли
+                массовые протесты и жесткие задержания.
+            </p>
+            <p>
+                Решение было принято 2 февраля. Таким образом, ему заменили условный срок на реальный. Приговор суда
+                может быть обжалован.
+            </p>
+            <p>
+                На решении настаивала Федеральная служба исполнения наказаний РФ, ее ходатайство поддержала прокуратура.
+                При этом защита Навального требовала отменить прошение ФСИН.
+            </p>
+            <img src="116772226navalny111.webp" alt="">
+            <br>
+            <h3>Что решил суд</h3>
+            <p>
+                Судья объявила, что оппозиционера должны <b> отправить в колонию общего режима</b>. Как уточнили в
+                Общественной
+                наблюдательной комиссии, Навального этапируют в одну из колоний Центрального федерального округа. До
+                вступления приговора в силу он будет находиться под стражей.
+            </p>
+            <p>
+                Также суд учел домашний арест, под которым находился политик около года. Таким образом, он <b> проведет
+                    в
+                    заключении 2,8 года и выйдет на свободу к 2023-му</b>.
+            </p>
+            <p>
+                Защита оппозиционера заявила, что <b> будет обжаловать решение суда </b>.
+            </p>
+            <h3>Что сказал Навальный во время заседания суда</h3>
+            <p>
+                Сам политик ранее выступил с речью, в которой назвал президента РФ Владимира Путина "отравителем
+                трусов". Он также напомнил, что его судили по делу, которое Европейский суд по правам человека признал
+                сфабрикованным.
+            </p>
+            <h4>Главные цитаты политика:</h4>
+            <ul>
+                <li>"Кому-то хотелось, чтобы с момента пересечения границы я оказался арестантом. Причина этому –
+                    ненависть и страх одного человека, живущего в бункере. Я нанес ему смертельную обиду тем, что
+                    выжил".
+                </li>
+                <li>
+                    "Мы доказали, что именно Путин совершил это покушение на убийство. И вот это сводит с ума этого
+                    маленького вороватого человека в его бункере".
+                </li>
+                <li>
+                    "В историю он (Путин) войдет именно как отравитель. Вот знаете, был Александр Освободитель или
+                    Ярослав Мудрый. А у нас будет Владимир Отравитель трусов".
+                </li>
+                <li>
+                    "Если мы откроем уголовное право, ваша честь, я надеюсь, вы делали это пару раз, мы увидим, что ЕСПЧ
+                    является частью (российской судебной системы) и его решения обязательны (к исполнению)".
+                </li>
+            </ul>
+            <h3>Реакция на приговор суда</h3>
+            <p>Международная общественность уже начала высказывать свое мнение по поводу судебного процесса над
+                оппозиционным российским политиком.
+            </p>
+            <p>
+                Так, <b> министр иностранных дел Германии Хайко Маас</b> осудил решение суда и назвал его
+                "произвольным". Глава
+                МИД призвал немедленно освободить политика. С таким же призывом <b>выступила и канцлер Ангела
+                    Меркель</b>.
+            </p>
+            <p>
+                <b>Госсекретарь США Энтони Блинкен </b> в свою очередь призвал освободить Навального "немедленно и безо
+                всяких условий".
+            </p>
+            <p>
+                В то же время сенатор США Митт Ромни анонсировал <b> внесение законопроекта о новых санкциях против РФ
+                </b> из-за приговора Навальному.
+            </p>
+            <p>
+                А <b> глава МИД Великобритании Доминик Рааб </b> потребовал освободить не только Навального, но и всех
+                задержанных в России во время протестов за последние две недели.
+            </p>
+            <p>
+                <b> Президент Франции Эммануэль Макрон </b> призвал немедленно освободить Навального.
+            </p>
+            <p>
+                <b> Высокий представитель ЕС по иностранным делам Жозеп Боррель </b> заявил, что приговор оппозиционеру
+                "противоречит международным обязательствам России в области верховенства права и основных свобод".
+            </p>
+            <p>
+                <b> В свою очередь в МИД РФ </b> сочли призывы Запада "вмешательством в дела суверенного государства".
+            </p>
+            <h3>Протесты в России</h3>
+            <p>
+                Под зданием Московского городского суда еще во время заседания начался митинг сторонников оппозиционера,
+                которых массово задерживали силовики.
+            </p>
+            <p>
+                В то же время штаб Навального после решения суда объявил о старте <b> акции протеста на Манежной площади
+                    в
+                    Москве</b>. Кроме того, акции прошли в других городах РФ, в частности – Санкт-Петербурге.
+            </p>
+            <p>
+                Силовики РФ в свою очередь стянули многочисленные силы, чтобы противостоять людям. <b> Задержаны более
+                    тысячи человек</b>, также некоторых из них избили. В числе задержанных и пострадавших есть
+                журналисты.
+            </p>
+            <img src="18.webp" alt="">
+            <h3>За что осудили этого Муддака</h3>
+            <p>
+                Политика обвинили в несоблюдении условий испытательного срока по приговору от 2014 года. Речь идет о
+                деле "Ив Роше".
+            </p>
+            <p>
+                Так, Следственный комитет утверждает, что братья Алексей и Олег Навальные обманом навязали российскому
+                подразделению "Ив Роше", а также фирме "Многопрофильная процессинговая компания" (МПК) посредника в
+                транспортно-логистических услугах – свою фирму "Главное подписное агентство" (Главподписка) и таким
+                образом украли у "Ив Роше Восток" 26 млн рублей, а у МПК – 3,8 млн рублей.
+            </p>
+            <p>
+                Затем большую часть этих средств они якобы легализовали, фиктивно снимая помещения под офис
+                "Главподписки" на семейной маленькой "Кобяковской фабрике лозоплетения" и оплачивая другие услуги и
+                товары фабрики.
+            </p>
+            <p>
+                После вынесения приговоров братьям Навальным, Европейский суд по правам человека пришел к выводу, что
+                они были приняты с нарушением конференции по правам человека. Однако Верховный суд РФ отказался
+                выполнять решение ЕСПЧ и отменять приговоры.
+            </p>
+            <p>
+                Многие связывают происходящее с расследованиями ФБК Навального, в том числе и о Путине, и высокой
+                поддержки россиян, которые выходили на протесты по всей стране.
+            </p>
+            <br><br>
             <h1>Ельцину исполнилось бы 90 лет</h1>
-            <img src="putin_mogila_elcina.jpg" alt="" >
+            <hr>
+            <img src="putin_mogila_elcina.jpg" alt="">
             <p>
                 Бори́с Николаевич Ельцин — советский и российский партийный, государственный и политический
                 деятель. Первый президент Российской Федерации (1991—1999). Родился 1 февраля 1931, в селе Бутка,
-                Буткинский район, Уральская область, РСФСР, СССР. Хороший был человек. Жалко, что он умер 23 апреля 2007 года в Москве.
+                Буткинский район, Уральская область, РСФСР, СССР. Хороший был человек. Жалко, что он умер 23 апреля 2007
+                года в Москве.
             </p>
             <br><br>
-            <h1>Распоряжение Правительства РФ</h1>
+            <h1>Правительство РФ</h1>
+            <hr>
+            <h2>Распоряжение Правительства РФ</h2>
             <hr>
             <p class="center"><b>Распоряжение Правительства РФ от 31 декабря 2020 г. N 3704-р</b></p>
             <p>
@@ -184,23 +339,7 @@
                 </tbody>
             </table>
             <br><br><br><br><br>
-            <h1>Навальный в России</h1>
-            <p>17 янвавря 2021 Навальный прилетел в России и сразу его арестовали. По мне правильно сделали. Он шпион
-                США - враг России. </p>
-            <p>Скажу я так, что для меня Навальный - это предатель Родины. Он никогда больше не изменится. Он уже
-                подчиняется США, чтобы через него получить доступ к управлению нашей страны. Но пока Путин президент у
-                США ничего не выйдет.
-            </p>
-            <p>
-                23 января будет митинг. И че? Смысл этого митинга. Вот скажите кто этот Навальный? Он предатель Родины.
-                Если он станет президентом, что сразу не будет коррупции? Или то что дороги станут качественнее Или чем вам Путин не нравится?
-            </p>
-            <p>
-                Путин - хороший президент. Он поднял нашу страну из забвения. Да и у него есть косяки, но зачем его
-                свергать. Наоборот его сергать не надо, пусть будет правит страной. Ону же знает что надо делать.
-                А Навальный? станет президентом и ничего он не знает что творится в стране.
-            </p>
-
+            
 
 
         </div>
