--- a/country/belarus/gos-simvolika/index.html
+++ b/country/belarus/gos-simvolika/index.html
@@ -62,12 +62,13 @@
                 Также как и флаг, герб был выбран на референдуме 1995 года. Элементы герба включают в себя полосы с
                 цветами флага Беларуси, контуры границы Белоруссии, колосья пшеницы и красную звезду. На двух нижних
                 лентах на белорусском языке написано название страны. Разновидность этого герба была официальной
-                эмблемой Белорусской ССР, созданной <div class="photo"><img src="gerb-of-Belarus.png" alt="" class="photo"></div>
-                Иваном Дубасовым в 1950 году. В версии советских времен, серп и
-                молот были на месте контуров границы Беларуси и все полосы были красными. Слева и справа был написан
-                социалистический девиз Пролетарии всех стран, соединяйтесь!, написанный на белорусском и русском
+                эмблемой Белорусской ССР, созданной
+            <div class="photo"><img src="gerb-of-Belarus.png" alt="" class="photo"></div>
+            Иваном Дубасовым в 1950 году. В версии советских времен, серп и
+            молот были на месте контуров границы Беларуси и все полосы были красными. Слева и справа был написан
+            социалистический девиз Пролетарии всех стран, соединяйтесь!, написанный на белорусском и русском
 
-                языках.
+            языках.
             </p>
             <p>
                 С момента распада СССР и по 7 июня 1995 года. гербом была эмблема «Погоня» (the chase). На красном фоне
@@ -161,10 +162,29 @@
         </div>
     </main>
     <footer>
-        <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
-        <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    &copy; 2020-2021 ООО "СССР"
+                </div>
+                <div class="col-sm">
+                    <p> <b>Для пользователя</b></p>
+                    <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
+                    <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
+                </div>
+
+                <div class="col-sm country">
+                    <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
+                    <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
+                </div>
+            </div>
+        </div>
     </footer>
-    <footer>&copy; 2020-2021 ООО "СССР"</footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
         crossorigin="anonymous"></script>
