--- a/country/russia/info/index.html
+++ b/country/russia/info/index.html
@@ -53,7 +53,7 @@
                 свергать. Наоборот его сергать не надо, пусть будет правит страной. Ону же знает что надо делать.
                 А Навальный? станет президентом и ничего он не знает что творится в стране.
             </p>
-<br><br>
+            <br><br>
             <h2>Навального посадили</h2>
             <hr>
             <p>
@@ -339,16 +339,42 @@
                 </tbody>
             </table>
             <br><br><br><br><br>
-            
+
 
 
         </div>
     </main>
     <footer>
-        <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
-        <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    &copy; 2020-2021 ООО "СССР"
+                </div>
+                <div class="col-sm">
+                    <p> <b>Для пользователя</b></p>
+                    <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
+                    <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
+                </div>
+
+                <div class="col-sm country">
+                    <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
+                    <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
+                </div>
+                <div class="col-sm country">
+                    <p><b><a href="/political-na-postsovet-space/country/russia/">Россия</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/">Основная информация</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a>
+                    </p>
+                    <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
+                </div>
+            </div>
+        </div>
     </footer>
-    <footer>&copy; 2020-2021 ООО "СССР"</footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
         crossorigin="anonymous"></script>
