--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -27,7 +27,7 @@
         </div>
         <div id="nav-country">
             <a href="/political-na-postsovet-space/country/ukraine/">Основная информация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/gos-system" >Государственное устройство</a>
+            <a href="/political-na-postsovet-space/country/ukraine/gos-system">Государственное устройство</a>
             <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/" id="id">Государственная символика</a>
         </div>
     </header>
@@ -61,7 +61,8 @@
                 официальный государственный символ Украины (наряду с гербом и гимном), а также один из национальных
                 символов украинцев.
                 Представляет собой прямоугольное полотнище из двух <img
-                    src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" class="photo"> равновеликих горизонтальных
+                    src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" class="photo"> равновеликих
+                горизонтальных
                 полос: верхней —
                 синего и
                 нижней — жёлтого цвета. Отношение ширины флага к его длине 2:3. Часто на практике оттенок синего может
@@ -89,10 +90,29 @@
         </audio>
     </main>
     <footer>
-        <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
-        <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    &copy; 2020-2021 ООО "СССР"
+                </div>
+                <div class="col-sm">
+                    <p> <b>Для пользователя</b></p>
+                    <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
+                    <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
+                </div>
+
+                <div class="col-sm country">
+                    <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
+                    <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
+                </div>
+            </div>
+        </div>
     </footer>
-    <footer>&copy; 2020-2021 ООО "СССР"</footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
         crossorigin="anonymous"></script>
