--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -29,6 +29,7 @@
             <a href="/political-na-postsovet-space/country/russia/" id="id">Основная информация</a>
             <a href="gos-simvolika/">Государственная символика</a>
             <a href="info/">Последние Новости</a>
+            <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
         </div>
     </header>
     <main>
@@ -137,6 +138,7 @@
                 областного (республиканского, краевого, окружного) значения.</p>
 
             <h3 id="president">Президент</h3>
+            <p style="text-align: center; "><i>Основная статья</i>: <a href="president/">Президент Российской Федерации</a></p>
             <p>
                 Главой государства является Президент Российской Федерации, в настоящее время — Владимир
                 Владимирович
@@ -177,128 +179,7 @@
                 обвинения в государственной измене или совершения иного тяжкого преступления и наличия положительных
                 заключений Верховного и Конституционного судов.
             </p>
-            <h4>Список президентов РФ</h4>
-            <table border="1" rules="all" class="table  table-bordered ty" style="width: 100%;">
-                <thead class="table-primary">
-                    <tr>
-                        <th scope="col">№ </th>
-                        <th scope="col">Срок</th>
-
-                        <th scope="col"> Имя <br> Отчество <br> Фамилия <br> (Год жизни)</th>
-                        <th scope="col" colspan="2">Срок полномочий</th>
-                        <th scope="col">Срок в годах и месяцах</th>
-
-                    </tr>
-                </thead>
-                <tbody class="ussr">
-                    <tr>
-                        <th scope="row" rowspan="2" style="background: red;">1</th>
-                        <td>1</td>
-
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Ельцин,_Борис_Николаевич">Борис <br>
-                                Николаевич <br> Ельцин</a> <br> (1931—2007)</td>
-                        <td>10 июля 1991</td>
-                        <td>9 августа 1996</td>
-                        <td>4 года <br> 7 месяцев <br> 9 дней</td>
-
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>9 августа 1996</td>
-                        <td>31 декабря 1999</td>
-                        <td>3 года <br> 4 месяца <br> 22 дня</td>
-                    </tr>
-                    <tr>
-                        <th scope="row" style="background: red;">-</th>
-                        <td>-</td>
-
-                        <td>
-                            <a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир <br>
-                                Владимирович <br> Путин</a> <br> <small>(исполняющий обязанности)</small>
-                        </td>
-                        <td>31 декабря 1999</td>
-                        <td>7 мая 2000</td>
-                        <td>4 месяцев <br> 1 неделя</td>
-
-
-                    </tr>
-                    <tr>
-                        <th scope="row" rowspan="2" style="background: red;">2</th>
-                        <td>1</td>
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
-                                <br>
-                                Владимирович <br> Путин</a> <br> (р. 1952)</td>
-                        <td>7 мая 2000</td>
-                        <td>7 мая 2004</td>
-                        <td>4 года</td>
-
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>7 мая 2004</td>
-                        <td>7 мая 2008</td>
-                        <td>4 года</td>
-                    </tr>
-                    <tr>
-                        <th scope="row" style="background: blue;">3</th>
-                        <td>1</td>
-
-                        <td><a href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий <br>
-                                Анатольевич <br>
-                                Медведев</a> <br> (р. 1965)</td>
-                        <td>7 мая 2008</td>
-                        <td>7 мая 2012</td>
-                        <td>4 года</td>
-
-                    </tr>
-                    <tr>
-                        <th scope="row" style="background: blue;">4</th>
-                        <td>3</td>
-
-                        </td>
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
-                                <br>
-                                Владимирович <br> Путин</a> <br> (р. 1952)</td>
-                        <td>7 мая 2012</td>
-                        <td>7 мая 2018</td>
-                        <td>6 лет</td>
-
-                    </tr>
-                    <tr>
-                        <td style="background: red;">4</td>
-                        <td>4
-                        </td>
-                        <td>7 мая 2018</td>
-                        <td>срок истекает <br> 7 мая 2024</td>
-                        <td>6 лет</td>
-                    </tr>
-                </tbody>
-            </table>
-
-
-            <br>
-
-            <div class="president">
-                <h3>Фото Президентов Российской Федерации</h3>
-                <div class="elsin">
-                    <img src="Boris.jpg" alt="" class="pres">
-
-                    <figcaption>Борис <br>
-                        Николаевич Ельцин </figcaption>
-                </div>
-                <div class="putin">
-                    <img src="Vladimir_Vladimirovich_Putin.jpg" alt="" class="pres">
-                    <figcaption>Владимир Владимирович Путин <br> <i>(1 и 2 президентские сроки)</i></figcaption>
-                </div>
-                <div class="medvedev">
-                    <img src="Dmitry_Anatolyevich_Medvedev.jpg" alt="" class="pres">
-                    <figcaption>Дмитрий <br> Анатольевич Медведев</figcaption>
-                </div>
-                <div class="putin">
-                    <img src="Vladimir_Vladimirovich_Putin_(2nd_Presidency).jpg" alt="" class="pres">
-                    <figcaption>Владимир Владимирович Путин <br><i>(3 и 4 президентские сроки)</i></figcaption>
-                </div>
-            </div>
+            
 
             <h2>Россия и США</h2>
             <hr>
@@ -399,6 +280,7 @@
                     <p> <b>Для пользователя</b></p>
                     <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
 
@@ -415,6 +297,7 @@
                     <p><a href="/political-na-postsovet-space/country/russia/">Основная информация</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской Федераци</a></p>
                 </div>
             </div>
         </div>
