--- a/country/russia/info/index.html
+++ b/country/russia/info/index.html
@@ -30,6 +30,7 @@
 
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика</a>
             <a href="" id="id">Последние Новости</a>
+            <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
         </div>
     </header>
     <main>
@@ -354,6 +355,7 @@
                     <p> <b>Для пользователя</b></p>
                     <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
 
@@ -371,6 +373,8 @@
                     <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a>
                     </p>
                     <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
+                            Федераци</a></p>
                 </div>
             </div>
         </div>
