--- a/index.html
+++ b/index.html
@@ -148,18 +148,19 @@
                 </div>
                 <div class="col-sm">
                     <p> <b>Для пользователя</b></p>
-                    <p><a href="contacts/">Поддержка</a></p>
-                    <p><a href="legal/">Правовая информация</a></p>
-                    <p><a href="putin/m/">Скачать файл</a></p>
+                    <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
+                    <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
 
                 <div class="col-sm country">
-                    <p><b><a href="country/">Страны</a></b></p>
-                    <p><a href="country/belarus/">Беларусь</a></p>
-                    <p><a href="country/russia/">Россия</a></p>
-                    <p><a href="country/ukraine/">Украина</a></p>
-                    <p><a href="country/dni/">ДНР</a></p>
-                    <p><a href="country/lnr/">ЛНР</a></p>
+                    <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
+                    <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
             </div>
         </div>
