--- a/country/lnr/gos-simvolika/index.html
+++ b/country/lnr/gos-simvolika/index.html
@@ -188,6 +188,7 @@
                     <p> <b>Для пользователя</b></p>
                     <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
 
