--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -31,6 +31,7 @@
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/" id="id">Государственная символика</a>
             <a href="/political-na-postsovet-space/country/russia/info/">Последние Новости</a>
+            <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
         </div>
     </header>
     <main>
@@ -227,6 +228,7 @@
                     <p> <b>Для пользователя</b></p>
                     <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
 
@@ -239,10 +241,11 @@
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
                 <div class="col-sm country">
-                    <p><b><a href="/political-na-postsovet-space/country/russia/">Россия</a></b></p>
+                    <p><b><a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Основная информация</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в Российской Федерации</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской Федерации</a></p>
                 </div>
             </div>
         </div></footer>
