--- a/country/russia/info/index.html
+++ b/country/russia/info/index.html
@@ -347,7 +347,12 @@
     </main>
     <footer>
         <div class="container">
+            <br>
             <div class="row">
+
+                <div class="col-sm">
+                    <img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png" alt="">
+                </div>
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                 </div>
@@ -358,7 +363,9 @@
                     <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
-
+                <div class="col-sm">
+                    <img src="/political-na-postsovet-space/country/russia/Dmitry_Anatolyevich_Medvedev.jpg" alt="">
+                </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
@@ -376,7 +383,11 @@
                     <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
                             Федераци</a></p>
                 </div>
+                <div class="col-sm">
+                    <img src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png" alt="">
+                </div>
             </div>
+            <br>
         </div>
     </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
