--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -220,7 +220,11 @@
 
     <footer>
         <div class="container">
+            <br>
             <div class="row">
+                <div class="col-sm">
+                    <img src="flag-of-Russia.png" alt="">
+                </div>
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                 </div>
@@ -231,7 +235,10 @@
                     <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
-
+                <div class="col-sm">
+                    <img src="/political-na-postsovet-space/country/russia/Vladimir_Vladimirovich_Putin.jpg"
+                        alt="">
+                </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
@@ -243,12 +250,21 @@
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Основная информация</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в Российской Федерации</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской Федерации</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a>
+                    </p>
+                    <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в Российской Федерации</a>
+                    </p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
+                            Федерации</a></p>
                 </div>
+                <div class="col-sm">
+                    <img src="gerb-of-Russia.png" alt="">
+                </div>
+
             </div>
-        </div></footer>
+            <br>
+        </div>
+    </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
         crossorigin="anonymous"></script>
