--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -271,8 +271,14 @@
         </div>
     </main>
     <footer>
+        
+
         <div class="container">
+            <br>
             <div class="row">
+                <div class="col-sm">
+                    <img src="gos-simvolika/flag-of-Russia.png" alt="">
+                </div>
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                 </div>
@@ -283,7 +289,9 @@
                     <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
-
+<div class="col-sm">
+    <img src="Boris.jpg" alt="">
+</div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
@@ -295,11 +303,16 @@
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/russia/">Россия</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Основная информация</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской Федераци</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/" >Государственные символы</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/info/" >Новости в РФ</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/" >Президент Российской Федераци</a></p>
                 </div>
+                <div class="col-sm">
+                    <img src="gos-simvolika/gerb-of-Russia.png" alt="">
+                </div>
+                
             </div>
+            <br>
         </div>
     </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
