--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -554,13 +554,20 @@
 
 
         </div>
+        <br>
     </main>
     <footer>
         <div class="container">
+            <br>
+           
             <div class="row">
+                <div class="col-sm">
+                    <img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png" alt="">
+                </div>
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                 </div>
+               
                 <div class="col-sm">
                     <p> <b>Для пользователя</b></p>
                     <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
@@ -568,7 +575,9 @@
                     <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
-
+<div class="col-sm">
+    <img src="/political-na-postsovet-space/country/russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="">
+</div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
@@ -582,8 +591,11 @@
                     <p><a href="/political-na-postsovet-space/country/russia/">Основная информация</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a>
                     </p>
-                    <p><a href="">Президент Российской Федераци</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской Федераци</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
+                </div>
+                <div class="col-sm">
+                    <img src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png" alt="">
                 </div>
             </div>
         </div>
