--- a/country/belarus/gos-simvolika/index.html
+++ b/country/belarus/gos-simvolika/index.html
@@ -163,7 +163,11 @@
     </main>
     <footer>
         <div class="container">
+            <hr>
             <div class="row">
+                <div class="col-sm">
+                    <img src="flag-of-Belarus.png" alt="">
+                </div>
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                 </div>
@@ -174,7 +178,7 @@
                     <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
-
+                <div class="col-sm"><img src="/political-na-postsovet-space/country/belarus/Lukashenko.jpg" alt=""></div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
@@ -183,7 +187,18 @@
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
+                <div class="col-sm country">
+                    <p><b><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/">Основная</a></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/">Государственные символы
+                        </a></p>
+
+                </div>
+                <div class="col-sm">
+                    <img src="gerb-of-Belarus.png" alt="">
+                </div>
             </div>
+            <hr>
         </div>
     </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
