--- a/country/index.html
+++ b/country/index.html
@@ -267,7 +267,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    &copy; 2020-2021 ООО "СССР"
+                   <p> &copy; 2020-2021 ООО "СССР" </p>
+                   <img src="ussr/flag-of-USSR.png" alt="">
                 </div>
                 <div class="col-sm">
                     <p> <b>Для пользователя</b></p>
@@ -275,6 +276,7 @@
                     <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
                     <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
+                    <p><img src="ussr/Gorbachev_(cropped).png" alt=""></p>
                 </div>
 
                 <div class="col-sm country">
@@ -284,6 +286,7 @@
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
+                    <p><img src="ussr/gerb-of-USSR.png" alt=""></p>
                 </div>
             </div>
         </div>
