--- a/country/index.html
+++ b/country/index.html
@@ -265,10 +265,15 @@
 
     <footer>
         <div class="container">
+            <hr>
             <div class="row">
+
                 <div class="col-sm">
-                   <p> &copy; 2020-2021 ООО "СССР" </p>
-                   <img src="ussr/flag-of-USSR.png" alt="">
+                    <p> &copy; 2020-2021 ООО "СССР" </p>
+
+                </div>
+                <div class="col-sm">
+                    <img src="ussr/flag-of-USSR.png" alt="">
                 </div>
                 <div class="col-sm">
                     <p> <b>Для пользователя</b></p>
@@ -276,9 +281,11 @@
                     <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
                     <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
-                    <p><img src="ussr/Gorbachev_(cropped).png" alt=""></p>
+                    <p></p>
                 </div>
-
+                <div class="col-sm">
+                    <img src="ussr/Gorbachev_(cropped).png" alt="">
+                </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
@@ -286,9 +293,13 @@
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
-                    <p><img src="ussr/gerb-of-USSR.png" alt=""></p>
+
+                </div>
+                <div class="col-sm">
+                    <img src="ussr/gerb-of-USSR.png" alt="">
                 </div>
             </div>
+            <hr>
         </div>
     </footer>
 
