--- a/country/russia/info/index.html
+++ b/country/russia/info/index.html
@@ -364,7 +364,10 @@
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
                 <div class="col-sm">
-                    <img src="/political-na-postsovet-space/country/russia/Dmitry_Anatolyevich_Medvedev.jpg" alt="">
+                    <div class="preside">
+                        <img src="/political-na-postsovet-space/country/russia/Dmitry_Anatolyevich_Medvedev.jpg" alt="">
+                        <figcaption>Дмитрий Анатольевич Медведев - третий президент Российской Федерации</figcaption>
+                    </div>
                 </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
