--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -558,8 +558,8 @@
     </main>
     <footer>
         <div class="container">
-            <br>
-           
+            <hr>
+
             <div class="row">
                 <div class="col-sm">
                     <img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png" alt="">
@@ -567,7 +567,7 @@
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                 </div>
-               
+
                 <div class="col-sm">
                     <p> <b>Для пользователя</b></p>
                     <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
@@ -575,9 +575,14 @@
                     <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
-<div class="col-sm">
-    <img src="/political-na-postsovet-space/country/russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="">
-</div>
+                <div class="col-sm">
+                    <div class="preside">
+                        <img src="/political-na-postsovet-space/country/russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg"
+                            alt="">
+                        <figcaption>Владимир Владимирович Путин - четвёртый действующий президент Российской Федерации
+                        </figcaption>
+                    </div>
+                </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
@@ -591,13 +596,15 @@
                     <p><a href="/political-na-postsovet-space/country/russia/">Основная информация</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a>
                     </p>
-                    <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской Федераци</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
+                            Федераци</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
                 </div>
                 <div class="col-sm">
                     <img src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png" alt="">
                 </div>
             </div>
+            <hr>
         </div>
     </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
