--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -181,6 +181,15 @@
                 предусматривающие шестилетний срок полномочий президента, введены в 2008 году, ранее глава
                 государства избирался раз в четыре года.
             </p>
+            <div class="photo">
+                <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+                <!-- VK Widget -->
+                <div id="vk_groups"></div>
+                <script type="text/javascript">
+                    VK.Widgets.Group("vk_groups", { mode: 3, no_cover: 1, width: "200" }, 198438193);
+                </script>
+            </div>
             <p>
                 Президент обладает рядом важнейших полномочий: руководит внешней политикой, является Верховным
                 главнокомандующим Вооружёнными силами, назначает с согласия Государственной думы председателя
@@ -294,6 +303,20 @@
             <p>
 
             </p>
+            <p>
+                <!-- Put this script tag to the <head> of your page -->
+<script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+<script type="text/javascript">
+  VK.init({apiId: 7752244, onlyWidgets: true});
+</script>
+
+<!-- Put this div tag to the place, where the Like block will be -->
+<div id="vk_like"></div>
+<script type="text/javascript">
+VK.Widgets.Like("vk_like", {type: "full", verb: 1});
+</script>
+            </p>
 
 
         </div>
@@ -307,7 +330,7 @@
                 <div class="col-sm">
                     <img src="gos-simvolika/flag-of-Russia.png" alt="">
                 </div>
-                
+
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                 </div>
