--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
 
     <main>
         <div class="container">
+
             <h1>Ельцину исполнилось бы 90 лет</h1>
-            <img src="country/russia/info/putin_mogila_elcina.jpg" alt="" >
+            <img src="country/russia/info/putin_mogila_elcina.jpg" alt="">
             <p>
                 Бори́с Николаевич Ельцин — советский и российский партийный, государственный и политический
                 деятель. Первый президент Российской Федерации (1991—1999). Родился 1 февраля 1931, в селе Бутка,
-                Буткинский район, Уральская область, РСФСР, СССР. Хороший был человек. Жалко, что он умер 23 апреля 2007 года в Москве.
+                Буткинский район, Уральская область, РСФСР, СССР. Хороший был человек. Жалко, что он умер 23 апреля 2007
+                года в Москве.
             </p>
             <br><br>
             <h1>Новогоднее обращение к гражданам России</h1>
@@ -134,6 +136,13 @@
             <p>
                 С праздником, дорогие друзья!
             </p>
+            <div id="vk_post_-198438193_71"></div>
+            <script type="text/javascript">
+                (function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "https://vk.com/js/api/openapi.js?168"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'vk_openapi_js'));
+                (function () {
+                    if (!window.VK || !VK.Widgets || !VK.Widgets.Post || !VK.Widgets.Post('vk_post_-198438193_71', -198438193, 71, 'eoxjXoufZB2CctXCgq_4CgXzkc88')) setTimeout(arguments.callee, 50);
+                }());
+            </script>
 
         </div>
 
@@ -153,7 +162,9 @@
                     <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
                 </div>
+                <div class="col-sm">
 
+                </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
@@ -163,6 +174,18 @@
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
             </div>
+            <!-- Put this script tag to the <head> of your page -->
+            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+            <script type="text/javascript">
+                VK.init({ apiId: 7752244, onlyWidgets: true });
+            </script>
+
+            <!-- Put this div tag to the place, where the Comments block will be -->
+            <div id="vk_comments"></div>
+            <script type="text/javascript">
+                VK.Widgets.Comments("vk_comments", { limit: 15, attach: "*" });
+            </script>
         </div>
     </footer>
 
