--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -374,7 +374,20 @@
                 </div>
 
             </div>
-            <br>
+             <!-- Put this script tag to the <head> of your page -->
+                <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+                <script type="text/javascript">
+                    VK.init({ apiId: 7752244, onlyWidgets: true });
+                </script>
+    
+                <!-- Put this div tag to the place, where the Comments block will be -->
+                <div id="vk_comments"></div>
+                <script type="text/javascript">
+                    VK.Widgets.Comments("vk_comments", { limit: 20, attach: "*" });
+                </script>
+                <hr>
+            
         </div>
     </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
