--- a/country/russia/info/index.html
+++ b/country/russia/info/index.html
@@ -390,6 +390,18 @@
                     <img src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png" alt="">
                 </div>
             </div>
+            <!-- Put this script tag to the <head> of your page -->
+            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+            <script type="text/javascript">
+                VK.init({ apiId: 7752244, onlyWidgets: true });
+            </script>
+
+            <!-- Put this div tag to the place, where the Comments block will be -->
+            <div id="vk_comments"></div>
+            <script type="text/javascript">
+                VK.Widgets.Comments("vk_comments", { limit: 20, attach: "*" });
+            </script>
             <br>
         </div>
     </footer>
