--- a/country/russia/info/index.html
+++ b/country/russia/info/index.html
@@ -348,6 +348,19 @@
     <footer>
         <div class="container">
             <br>
+            <!-- Put this script tag to the <head> of your page -->
+            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+            <script type="text/javascript">
+                VK.init({ apiId: 7752244, onlyWidgets: true });
+            </script>
+
+            <!-- Put this div tag to the place, where the Like block will be -->
+            <div id="vk_like"></div>
+            <script type="text/javascript">
+                VK.Widgets.Like("vk_like", { type: "button" });
+            </script>
+            <hr>
             <div class="row">
 
                 <div class="col-sm">
@@ -390,6 +403,7 @@
                     <img src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png" alt="">
                 </div>
             </div>
+            <hr>
             <!-- Put this script tag to the <head> of your page -->
             <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
