--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -558,6 +558,19 @@
     </main>
     <footer>
         <div class="container">
+            <br>
+            <!-- Put this script tag to the <head> of your page -->
+            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+            <script type="text/javascript">
+                VK.init({ apiId: 7752244, onlyWidgets: true });
+            </script>
+
+            <!-- Put this div tag to the place, where the Like block will be -->
+            <div id="vk_like"></div>
+            <script type="text/javascript">
+                VK.Widgets.Like("vk_like", { type: "button" });
+            </script>
             <hr>
 
             <div class="row">
@@ -604,6 +617,7 @@
                     <img src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png" alt="">
                 </div>
             </div>
+            <hr>
              <!-- Put this script tag to the <head> of your page -->
                 <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
@@ -617,7 +631,7 @@
                     VK.Widgets.Comments("vk_comments", { limit: 20, attach: "*" });
                 </script>
                 
-            <hr>
+            <br>
         </div>
     </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
