--- a/country/russia/info/index.html
+++ b/country/russia/info/index.html
@@ -409,7 +409,9 @@
                     </p>
                     <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
-                            Федераци</a></p>
+                            Федераци</a>
+                    </p>
+                    <p><a href="http://kremlin.ru">Сайт президента РФ</a></p>
                 </div>
 
             </div>
