--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -553,21 +553,21 @@
             </div>
 
 
-      
-        <hr>
-        <!-- Put this script tag to the <head> of your page -->
-        <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
-        <script type="text/javascript">
-            VK.init({ apiId: 7752244, onlyWidgets: true });
-        </script>
+            <hr>
+            <!-- Put this script tag to the <head> of your page -->
+            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
-        <!-- Put this div tag to the place, where the Comments block will be -->
-        <div id="vk_comments"></div>
-        <script type="text/javascript">
-            VK.Widgets.Comments("vk_comments", { limit: 20, attach: "*" });
-        </script>
-        <br>
+            <script type="text/javascript">
+                VK.init({ apiId: 7752244, onlyWidgets: true });
+            </script>
+
+            <!-- Put this div tag to the place, where the Comments block will be -->
+            <div id="vk_comments"></div>
+            <script type="text/javascript">
+                VK.Widgets.Comments("vk_comments", { limit: 20, attach: "*" });
+            </script>
+            <br>
         </div>
     </main>
     <footer>
@@ -621,9 +621,12 @@
                     <p><a href="/political-na-postsovet-space/country/russia/">Основная информация</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a>
                     </p>
-                    <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
-                            Федераци</a></p>
+
                     <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
+                            Федераци</a>
+                    </p>
+                    <p><a href="http://kremlin.ru">Сайт президента РФ</a></p>
                 </div>
 
             </div>
